--- a/ego_manage/pom.xml
+++ b/ego_manage/pom.xml
@@ -19,11 +19,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!-- 依赖ego_commons -->
-        <dependency>
+       <!-- <dependency>
             <artifactId>ego_commons</artifactId>
             <groupId>com.ego</groupId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
         <!-- dubbo的consumer-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -69,10 +69,10 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <!-- security-->
-        <dependency>
+     <!--   <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 </project>
