feat： 新增用户登录 权限验证功能呢实现 使用技术springSecurity

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>ego_api</module>
         <module>ego_provider</module>
         <module>ego_manage</module>
+        <module>ego_commons</module>
     </modules>
 
     <!-- Spring Boot的父项目，声明所有Spring Boot相关版本 -->
