--- a/ego_manage/pom.xml
+++ b/ego_manage/pom.xml
@@ -19,11 +19,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!-- 依赖ego_commons -->
-       <!-- <dependency>
+        <dependency>
             <artifactId>ego_commons</artifactId>
             <groupId>com.ego</groupId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>-->
+        </dependency>
         <!-- dubbo的consumer-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
