--- a/ego_provider/pom.xml
+++ b/ego_provider/pom.xml
@@ -24,6 +24,12 @@
             <groupId>com.ego</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--依赖Commons-->
+        <dependency>
+            <artifactId>ego_commons</artifactId>
+            <groupId>com.ego</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- dubbo -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
