--- a/ego_api/pom.xml
+++ b/ego_api/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>ego_pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.ego</groupId>
+            <artifactId>ego_commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
